--- a/com_timeclock/admin/forms/department.xml
+++ b/com_timeclock/admin/forms/department.xml
@@ -31,7 +31,7 @@
         <field
             name="published"
             type="list"
-            class="chzn-color-state span10"
+            class="form-select-color-state"
             default="1"
             size="1"
             label="JSTATUS"
