--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -35,6 +35,11 @@
     padding-bottom: 10px;
     height: 2em;
 }
+span.vertical {
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+    transform: rotate(180deg);
+}
 .vertical-text {
     padding: 0px;
     margin: 0px;
